--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='app'>
 <head>
 	<meta charset="utf-8">
 	<title>MEAN Friends</title>
 	<script src='angular/angular.js' charset='utf-8'></script>
-	<script src='angular-messages/angular-messages.js' charset='utf-8'></script>
+	<script src='angular-route/angular-route.js' charset='utf-8'></script>
+	<script src='assets/app.js'></script>
 </head>
 <body>
 	<h1>Welcome</h1>
+	<a href="#/new">New Friend</a> | <a href="#/edit">Edit Friend</a>
+	<div ng-view>
+		
+	</div>
 </body>
 </html>
