--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,14 @@
 	<script src='angular/angular.js' charset='utf-8'></script>
 	<script src='angular-route/angular-route.js' charset='utf-8'></script>
 	<script src='assets/app.js'></script>
+	<script src='assets/controllers/mainController.js'></script>
+	<script src='assets/controllers/newController.js'></script>
+	<script src='assets/controllers/editController.js'></script>
+	<script src='assets/controllers/showController.js'></script>
+	<script src='assets/factories/friendsFactory.js'></script>
 </head>
 <body>
 	<h1>Welcome</h1>
-	<a href="#/new">New Friend</a> | <a href="#/edit">Edit Friend</a>
 	<div ng-view>
 		
 	</div>
